[PT#144503469] Skip main nav and fixed spacing for AppBar buttons

--- a/src/sass/_muifixes.scss
+++ b/src/sass/_muifixes.scss
@@ -104,7 +104,7 @@ button[type=button] {
     line-height: 75px !important;
   }
   button {
-    line-height: 75px;
+    margin-top: 12px !important;
   }
 }
 
